[package]
name = "fnmatch-sys"
version = "1.0.1"
authors = ["Ian Wahbe <github @iwahbe>"]
edition = "2018"
links = "fnmatch"
description = "Rust binding for the C header fnmatch.h"
readme = "README.md"
repository = "https://github.com/iwahbe/fnmatch-sys"
license = "MIT OR Apache-2.0"

[build-dependencies]
cc = "1.0"
